version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-admin-config-log-level-set.mdx
---
title: rpk redpanda admin config log-level set
rpk_version: v23.1.6 (rev cc47e1ad1)
---

<head>
  <meta name="title" content="rpk redpanda admin config log-level set | Redpanda Docs" />
  <meta name="description" content="rpk redpanda admin config log-level set" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-admin-config-log-level-set/" />
</head>

Set broker logger's log level.

This command temporarily changes a broker logger's log level. Each Redpanda
broker has many loggers, and each can be individually changed. Any change
to a logger persists for a limited amount of time, so as to ensure you do
not accidentally enable debug logging permanently.

It is optional to specify a logger; if you do not, this command will prompt
from the set of available loggers.

The special logger `all` enables all loggers. Alternatively, you can specify
many loggers at once. To see all possible loggers, run the following command:

```
redpanda --help-loggers
```

This command accepts loggers that it does not know of to ensure you can
independently update your redpanda installations from rpk. The success or
failure of enabling each logger is individually printed.

## Usage

```bash
rpk redpanda admin config log-level set [LOGGERS...] [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|-e, --expiry-seconds |int |seconds to persist this log level override
before redpanda reverts to its previous settings (if 0, persist until
shutdown) (default 300).

|-h, --help |- |Help for set.

|--host |string |Either a hostname or an index into
`rpk.admin_api.addresses` config section to select the hosts to issue
the request to.

|-l, --level |string |Log level to set (error, warn, info, debug, trace)
(default "debug").

|--admin-api-tls-cert |string |The certificate to be used for TLS
authentication with the Admin API.

|--admin-api-tls-enabled |- |Enable TLS for the Admin API (not necessary
if specifying custom certs).

|--admin-api-tls-key |string |The certificate key to be used for TLS
authentication with the Admin API.

|--admin-api-tls-truststore |string |The truststore to be used for TLS
communication with the Admin API.

|--config |string |rpk config file, if not set the file will be searched
for in the default locations.

|--hosts |strings |A comma-separated list of Admin API addresses
(<ip>:<port> You must specify one for each node.

|-v, --verbose |- |Enable verbose logging (default `false`).
|===

-->
